View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033555 | Open CASCADE | OCCT:Foundation Classes | public | 2023-12-15 01:55 | 2024-07-18 21:26 |
Reporter | dpasukhi | Assigned To | dpasukhi | ||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Target Version | 7.8.1 | ||||
Summary | 0033555: Foundation Classes - DEBUG macro leads to compile error | ||||
Description | The reason of compiler problem is updated code:--- a/src/BRepCheck/BRepCheck_Shell.cxx +++ b/src/BRepCheck/BRepCheck_Shell.cxx @@ -82,9 +82,9 @@ Standard_EXPORT Standard_Integer BRepCheck_Trace(const Standard_Integer phase) { return BRC_Trace; } -void PrintShape(const TopoDS_Shape& theShape, const Standard_Integer upper) { +void PrintShape(const TopoDS_Shape& theShape) { | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33555 has been created by dpasukhi. SHA-1: 57066be06a0da49b5063dcddd4daa87ff0f97956 Detailed log of new commits: Author: dpasukhi Date: Thu Dec 14 22:56:36 2023 +0000 0033555: Foundation Classes - DEBUG macro leads to compile error Removed incorrect parameter call when DEBUG macro is active |
|
Branch CR33555_1 has been created by dpasukhi. SHA-1: 6354a128285c78947011b383b1598898b4291b4f Detailed log of new commits: Author: dpasukhi Date: Thu Dec 14 22:56:36 2023 +0000 0033555: Foundation Classes - DEBUG macro leads to compile error Removed incorrect parameter call when DEBUG macro is active |
|
Dear IKA, please review: OCCT: CR3355_1 PROD: NO Tests: http://jenkins-test-10.nnov.opencascade.com/view/CR0-780-beta-dpasukhi/view/COMPARE/ |
|
No remarks. Dear bugmaster, please integrate OCCT: CR33555_1 PROD: NO |
|
Combination - OCCT branch : IR-2023-12-15 master SHA - 83bb2a329d6bb51a194aa27abb11facde2f6a270 d2ef868da4165400c82322bd7f11b652decce47a Products branch : master SHA - 5dec4946337d2a162f4821cf085bd1e181f46ce8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Ubuntu2004-64: OCCT Total CPU difference: 18269.079999999904 / 19196.92000000018 [-4.83%] Products Total CPU difference: 11554.499999999949 / 12290.319999999989 [-5.99%] Windows-64-VC142: OCCT Total CPU difference: 20132.90625 / 20986.796875 [-4.07%] Products Total CPU difference: 12359.828125 / 14282.375 [-13.46%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33555 has been deleted by dpasukhi. SHA-1: 57066be06a0da49b5063dcddd4daa87ff0f97956 |
|
Branch CR33555_1 has been deleted by dpasukhi. SHA-1: 6354a128285c78947011b383b1598898b4291b4f |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-12-15 01:55 | dpasukhi | New Issue | |
2023-12-15 01:55 | dpasukhi | Assigned To | => dpasukhi |
2023-12-15 01:56 | git | Note Added: 0114744 | |
2023-12-15 14:05 | git | Note Added: 0114753 | |
2023-12-15 14:06 | dpasukhi | Assigned To | dpasukhi => ika |
2023-12-15 14:06 | dpasukhi | Status | new => resolved |
2023-12-15 14:06 | dpasukhi | Steps to Reproduce Updated | |
2023-12-15 14:06 | dpasukhi | Note Added: 0114754 | |
2023-12-15 16:14 | ika | Assigned To | ika => bugmaster |
2023-12-15 16:14 | ika | Status | resolved => reviewed |
2023-12-15 16:14 | ika | Note Added: 0114757 | |
2023-12-18 02:11 | vglukhik | Note Added: 0114765 | |
2023-12-18 02:17 | vglukhik | Changeset attached | => occt master 83bb2a32 |
2023-12-18 02:17 | dpasukhi | Assigned To | bugmaster => dpasukhi |
2023-12-18 02:17 | dpasukhi | Status | reviewed => verified |
2023-12-18 02:17 | dpasukhi | Resolution | open => fixed |
2024-07-18 21:24 | git | Note Added: 0116248 | |
2024-07-18 21:26 | git | Note Added: 0116254 |