0033555: Foundation Classes - DEBUG macro leads to compile error

Removed incorrect parameter call when DEBUG macro is active